<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/name_room"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_bgr_edt"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="#b8e8f0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rename" />

    <EditText
        android:id="@+id/edt_rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ellipsize="end"
        android:hint="@string/edt_rename"
        android:maxWidth="240dp"
        android:maxLines="1"
        android:paddingVertical="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_bgr_edt"
        app:layout_constraintEnd_toEndOf="@+id/img_bgr_edt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_bgr_edt"
        app:layout_constraintTop_toTopOf="@+id/img_bgr_edt" />


    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/bgr_edt_cancel"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rename_ok"
        app:layout_constraintEnd_toStartOf="@id/tv_rename_ok"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_bgr_edt" />

    <TextView
        android:id="@+id/tv_rename_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bgr_edt_cancel"
        android:padding="10dp"
        android:text="@string/add"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_bgr_edt" />

</androidx.constraintlayout.widget.ConstraintLayout>