<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#626262">

    <ImageView
        android:id="@+id/img_line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="#787474"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/tv_create_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/distance"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/img_line"
        app:layout_constraintStart_toStartOf="@+id/img_line"
        app:layout_constraintTop_toBottomOf="@+id/img_line" />

    <EditText
        android:id="@+id/edt_distance"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bgr_edt_distance"
        android:gravity="center"
        android:maxLines="1"
        android:ellipsize="end"
        android:paddingHorizontal="2dp"
        android:hint="@string/value"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_new"
        app:layout_constraintWidth_percent="0.4" />

    <ImageView
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_distance" />

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="6dp"
        android:src="@drawable/icon_info"
        app:layout_constraintBottom_toBottomOf="@id/edt_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/edt_distance"
        app:layout_constraintTop_toTopOf="@+id/edt_distance" />

    <ImageView
        android:id="@+id/img_color"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:src="@drawable/icon_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/tv_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:text="@string/color"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_color"
        app:layout_constraintStart_toStartOf="@+id/img_color"
        app:layout_constraintTop_toBottomOf="@+id/img_color" />

    <ImageView
        android:id="@+id/img_thickness"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="6dp"
        android:src="@drawable/icon_line_thickness"
        app:layout_constraintBottom_toBottomOf="@+id/img_color"
        app:layout_constraintEnd_toStartOf="@+id/img_delete"
        app:layout_constraintStart_toEndOf="@+id/img_color"
        app:layout_constraintTop_toTopOf="@+id/img_color" />

    <TextView
        android:id="@+id/tv_thickness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:text="@string/line_thickness"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_thickness"
        app:layout_constraintStart_toStartOf="@+id/img_thickness"
        app:layout_constraintTop_toBottomOf="@+id/img_thickness" />

    <ImageView
        android:id="@+id/img_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="6dp"
        android:src="@drawable/icon_delete"
        app:layout_constraintBottom_toBottomOf="@+id/img_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_color" />

    <TextView
        android:id="@id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_delete"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_thickness"
        app:layout_constraintEnd_toEndOf="@+id/img_delete"
        app:layout_constraintStart_toStartOf="@+id/img_delete"
        app:layout_constraintTop_toTopOf="@id/tv_thickness" />

</androidx.constraintlayout.widget.ConstraintLayout>