<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="#787474"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/tv_create_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/create_new"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/img_line"
        app:layout_constraintStart_toStartOf="@+id/img_line"
        app:layout_constraintTop_toBottomOf="@+id/img_line" />

    <ImageView
        android:id="@+id/img_create_home"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:padding="4dp"
        android:src="@drawable/icon_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_new" />

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:text="@string/home"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/img_create_home"
        app:layout_constraintStart_toStartOf="@+id/img_create_home"
        app:layout_constraintTop_toBottomOf="@+id/img_create_home" />

    <ImageView
        android:id="@+id/img_create_room"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_room"
        app:layout_constraintBottom_toBottomOf="@+id/img_create_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_create_home" />

    <TextView
        android:id="@+id/tv_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/img_create_room"
        app:layout_constraintStart_toStartOf="@+id/img_create_room"
        app:layout_constraintTop_toBottomOf="@+id/img_create_room" />
</androidx.constraintlayout.widget.ConstraintLayout>